--- a/.cloudflare/pages.toml
+++ b/.cloudflare/pages.toml
@@ -1,12 +1,9 @@
 [build]
 command = "npm run build:cloudflare"
-output_directory = ".next"
+output_directory = ".next/standalone"
 node_version = "18"
 
 [build.environment]
 NODE_VERSION = "18"
 NPM_VERSION = "9"
 
-[site]
-bucket = "/"
-entry-point = "."
