--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint . --max-warnings=100",
     "postinstall": "prisma generate",
     "prisma:seed": "tsx prisma/seed.ts",
     "prisma:push": "prisma db push"
