Fix Vercel build by adding Prisma generation
- Add 'prisma generate' to build script
- Ensures Prisma client is generated before Next.js build
- Fixes deployment error on Vercel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/prepare-production.js && next build",
+    "build": "node scripts/prepare-production.js && prisma generate && next build",
     "build:with-prisma": "node scripts/prepare-production.js && prisma generate && next build",
     "vercel-build": "npx prisma generate && next build",
     "start": "next start",
